k8s/primegenerator/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prime-generator
  labels:
    name: prime-generator
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: prime-generator
