k8s/primegenerator/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prime-generator
  labels:
    name: prime-generator
spec:
  path: "/"
  to:
    kind: Service
    name: prime-generator
